src/objects/MT_CampaignTypeParameterVersion__c.object
<CustomObject>
    <description>Hält wichtige Daten für den Media Monatsplan in Abhängigkeit zu den Kampagnentypen</description>
    <fields>
        <fullName>MT_AirTimeRate__c</fullName>
        <description>Die Air-Time-Rate, mit der bei Kampagnen diesen Typs zwischen Brutto- und Nettovolumen umgerechnet werden kann.</description>
        <label>Air time rate</label>
        <precision>5</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MT_BarterYieldQuantifier__c</fullName>
        <description>Der Gewichtungsfaktor für den Barter-Yield, der in das Kampagnenranking einfließt.</description>
        <label>Barter Yield Quantifier</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MT_CoverageMarginII__c</fullName>
        <description>Der CM II, der im Kampagnenranking genutzt wird.</description>
        <label>Deckungsbeitrag II</label>
        <precision>5</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MT_EquityYieldQuantifier__c</fullName>
        <description>Der Gewichtungsfaktor für den Equity-Yield, der in das Kampagnenranking einfließt.</description>
        <label>Equity Yield Quantifier</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MT_ExitParticipationYieldQuantifier__c</fullName>
        <description>Der Gewichtungsfaktor für den Exit Participation-Yield, der in das Kampagnenranking einfließt.</description>
        <label>Exit Participation Yield  Quantifier</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MT_FillUpYieldQuantifier__c</fullName>
        <description>Der Gewichtungsfaktor für den Fill Up-Yield, der in das Kampagnenranking einfließt.</description>
        <label>Fill up Yield Quantifier</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MT_FixYieldQuantifier__c</fullName>
        <description>Der Gewichtungsfaktor für den Fix-Yield, der in das Kampagnenranking einfließt.</description>
        <label>Fix Yield Quantifier</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MT_MediaCampaignType_ref__c</fullName>
        <description>Der Kamapgnentyp, zu dem diese Parameter gehören.</description>
        <label>Media Campaign Type</label>
        <referenceTo>MT_MediaCampaignType__c</referenceTo>
        <relationshipLabel>Media Campaign Type Parameter Version</relationshipLabel>
        <relationshipName>MediaCampaignType_ParameterVersion</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>MT_ValidFrom__c</fullName>
        <description>Der Monat, ab dem die Werte aus diesem Datensatz für die entsprechenden Kampagnen gelten.</description>
        <label>Geltungsdatum</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MT_VariableYieldQuantifier__c</fullName>
        <description>Der Gewichtungsfaktor für den Umsatzbeteiligungs-Yield, der in das Kampagnenranking einfließt.</description>
        <label>Variable Yield Quantifier</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MT_WKZFactor__c</fullName>
        <description>Der WKZ- Faktor, der Einfluss auf den ROI- Umsatz hat.</description>
        <label>WKZ-Faktor</label>
        <precision>5</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Media Campaign Type Parameter Version</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>de</language>
    </listViews>
    <nameField>
        <label>Version Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Media Campaign Type Parameter Version</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>MT_AirTimeRateMinMax</fullName>
        <active>true</active>
        <description>Überprüft das die Air time rate zwischen 0 und 100 ist</description>
        <errorConditionFormula>OR(MT_AirTimeRate__c &gt; 1, MT_AirTimeRate__c &lt; 0)</errorConditionFormula>
        <errorDisplayField>MT_AirTimeRate__c</errorDisplayField>
        <errorMessage>Die Air time rate kann nur zwischen 0 und 100 liegen.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MT_BarterYieldQuantifierNotNegative</fullName>
        <active>true</active>
        <description>Überprüft ob der Barter Yield Quantifier negativ ist, ist er es, dann wird ein Fehler angezeigt.</description>
        <errorConditionFormula>MT_BarterYieldQuantifier__c &lt; 0</errorConditionFormula>
        <errorDisplayField>MT_BarterYieldQuantifier__c</errorDisplayField>
        <errorMessage>Bitte stellen Sie sicher, dass der Wert nicht negativ ist.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MT_EquityYieldQuantifierNotNegative</fullName>
        <active>true</active>
        <description>Überprüft ob der Equity Yield negativ ist, ist er es, dann wird ein Fehler angezeigt.</description>
        <errorConditionFormula>IF( MT_EquityYieldQuantifier__c &lt; 0, true, false)</errorConditionFormula>
        <errorDisplayField>MT_EquityYieldQuantifier__c</errorDisplayField>
        <errorMessage>Bitte stellen Sie sicher, dass der Wert nicht negativ ist.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MT_ExitParticipationYieldQuanNotNegative</fullName>
        <active>true</active>
        <description>Überprüft ob der Exit Participation Yield negativ ist, ist er es, dann wird ein Fehler angezeigt.</description>
        <errorConditionFormula>IF( MT_ExitParticipationYieldQuantifier__c &lt; 0, true, false)</errorConditionFormula>
        <errorDisplayField>MT_ExitParticipationYieldQuantifier__c</errorDisplayField>
        <errorMessage>Bitte stellen Sie sicher, dass der Wert nicht negativ ist.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MT_FillIupYieldQuanNotNegative</fullName>
        <active>true</active>
        <description>Überprüft ob der Fill-up Yield negativ ist, ist er es, dann wird ein Fehler angezeigt.</description>
        <errorConditionFormula>IF( MT_FillUpYieldQuantifier__c &lt; 0, true, false)</errorConditionFormula>
        <errorDisplayField>MT_FillUpYieldQuantifier__c</errorDisplayField>
        <errorMessage>Bitte stellen Sie sicher, dass der Wert nicht negativ ist.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MT_FixYieldQuantifierNotNegative</fullName>
        <active>true</active>
        <description>Überprüft ob der Fix Yield negativ ist, ist er es, dann wird ein Fehler angezeigt.</description>
        <errorConditionFormula>IF( MT_FixYieldQuantifier__c &lt; 0, true, false)</errorConditionFormula>
        <errorDisplayField>MT_FixYieldQuantifier__c</errorDisplayField>
        <errorMessage>Bitte stellen Sie sicher, dass der Wert nicht negativ ist.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MT_VariableYieldQuantifierNotNegative</fullName>
        <active>true</active>
        <description>Überprüft ob der Variable Yield negativ ist, ist er es, dann wird ein Fehler angezeigt.</description>
        <errorConditionFormula>IF( MT_VariableYieldQuantifier__c &lt; 0, true, false)</errorConditionFormula>
        <errorDisplayField>MT_VariableYieldQuantifier__c</errorDisplayField>
        <errorMessage>Bitte stellen Sie sicher, dass der Wert nicht negativ ist.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MT_WKZFactorNotNegative</fullName>
        <active>true</active>
        <description>Überprüft ob der WKZ-Faktor negativ ist, ist er es, dann wird ein Fehler angezeigt.</description>
        <errorConditionFormula>IF(MT_WKZFactor__c &lt; 0, true, false)</errorConditionFormula>
        <errorDisplayField>MT_WKZFactor__c</errorDisplayField>
        <errorMessage>Bitte stellen Sie sicher, dass der Wert nicht negativ ist.</errorMessage>
    </validationRules>
</CustomObject>